About us and coppyright footer

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1293,7 +1293,15 @@ old.spin div:hover{
 	margin-right: 0;
 	width: 100%;
 }
-    
+ 
+
+#coppyright {
+	position: absolute;
+	top: 146px;
+	left: 210px;
+	color: white;
+}
+   
 .cbdispatchtext {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
