--- a/app/views/modals/_about.html.erb
+++ b/app/views/modals/_about.html.erb
@@ -4,25 +4,9 @@
     <h3>About Cannapages</h3>
   </div>
   <div class="modal-body about-modal">
-		<h4>CannaCritiques</h4>
-
-		<h5>Expert Reviews for Fine Cannabis Products</h5>
-		<p>If you can’t get a cannabis cup award, at least get your prized product the review it deserves, with an expert write-up from the CannaCritics! We proudly help set apart each signature strain by researching its lineage and documenting the user-experience for other patients. This can be tricky, especially monitoring a variety of people with different tolerance levels and smoking habits.</p>
-		<p>Strain reviews from the CannaCritics help patients find your business online, and better customize their purchasing. Your store will see larger numbers of educated patients who care about more about the quality of their bud than its price. Create a buzz about your strain at no cost and shoot for the coveted Cream of the Crop designation on Cannapages.com, our undeniable certificate of excellence.</p>
-		<ul>
-		<li>Use an excerpt for your advertising or website.</li>
-		<li>Get found in Search Engines</li>
-		<li>The Critics review and publish for FREE</li>
-		</ul>
-		<hr />
-
-		<h5>CannaMerchant</h5>
-		<ul>
-		<li>Expert Accounting, Compliance and Tracking Solutions</li>
-		<li>CannaMerchant is the most cutting-edge operations system in the cannabis industry, exclusively available from the experts at Cannapages.com. Utilizing the database genius of Adilas.biz and a superior seed-to-shelf grow managing system, we proudly offer the most powerful and competitive internet-based software for the lowest price!</li>
-		<li>There is no other POS or Compliance Operating System that integrates real time point of sale, payroll, live accounting, and grow-tracking in such a seamless fashion! Do all your management on-site, from home, or on your mobile phone. Reconcile your bank account, perform schedule and payroll, and calculate investments or taxes instantly–even while away from the office. CannaMerchant clients enjoy the benefit of FREE menu linking to their listing on Cannapages.com, so that patients can see what you have in stock the moment it’s in the system! Even link your CannaMerchant menu to your website or other MMJ Directories!</li>
-		</ul>
-		<hr />
-
+		<h5>About Us:</h5>
+		<p>Cannapages.com was founded by patients and volunteers in 2009 as a directory and medical cannabis patient resource. Since then, we've expanded into magazines and other channels, and now reach well over 250,000 international enthusiasts monthly. Our agency has grown to incorporate other industry leaders and their initiatives, and we work tirelessly to develop new technologies that will fully connect both consumers and businesses in this blossoming community. Everything you see is based on research: we've managed dispensaries and industrial growspaces, we've helped brand companies and clubs, we've launched publications and hosted conventions.</p>
+		<p>Our Denver-based Cannapages Headquarters always gets new tips from all over the country; whether medical or retail, legal, grow-related or otherwise, we are working hard to revolutionize this industry and include everybody! If you have a listing, category, article, new product, or anything else the Cannapages editors need to know about, don't hesitate to contact us! We also offer free or discounted consulting and tech services to cannabis industry groups and political campaigns.</p>
+		<p>Have a question about advertising? Starting a Cannabis Business? Contact Us Today!</p>
   </div>
 </div>
