--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -56,5 +56,6 @@
 			<td></td>
 		</tr>
 	</table>
+		<p id="coppyright">Cannapages.com, Copyright 2012. Member of the National Cannabis Press, and Feest Group Affiliate.</p>
 	</div>
 </div>
