--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -41,7 +41,7 @@
 																		"data-toggle" => :modal ) %>
 			</td>
 			<td><%= link_to "Exclusive Editorials", critiques_path %></td>
-			<td><%= link_to "First Rank", "http://firstrank.biz/" %></td>
+			<td><%= link_to "Data Recovery", "http://www.thecomputerguru.biz/" %></td>
 			<td></td>
 			<td></td>
 		</tr>
