--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,13 +1,15 @@
       <div id="cannacarouseltop" class="carousel slide">
         <!-- Carousel items -->
         <div class="carousel-inner">
+					<div class="active item"><%= link_to( image_tag("/assets/slider/419.jpg"),
+																	"http://ezregister.com/events/6491/") %></div>
           <div class="item"><%= link_to( image_tag("/images/slider/carousel_critiques.jpg"),
 																								critiques_path ) %></div>
           <div class="item"><%= link_to( image_tag("/images/slider/carousel_dispatches.jpg"),
 																								current_volume_path ) %></div>
           <% cadets_link = ((current_user.user_name == "anonymous") ? "#create_user_modal" : user_profile_path( current_user )) %> 
 					<% link_data = ((current_user.user_name == "anonymous") ? :modal : "" ) %>
-					<div class="active item"><%= link_to( image_tag("/images/slider/carousel_cadets.jpg"),
+					<div class="item"><%= link_to( image_tag("/images/slider/carousel_cadets.jpg"),
 																	cadets_link, "data-toggle" => link_data ) %></div>
 
         </div>
